# Sales-MCP-Bundle-

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
apps/demo-web/: index.html  package.json
apps/demo-web/src/: App.tsx  data.ts  styles.css  vite-env.d.ts
apps/mcp-server/: package.json  tsconfig.json
apps/mcp-server/src/: config.ts  index.ts  server.ts  stdio.ts  tools.ts
docs/: AUTH_DESIGN.md  BUILD_SPEC.md  PROVIDER_MATRIX.md
python/intelligence/: README.md  pyproject.toml
python/intelligence/src/intelligence/: __init__.py  app.py  deal_risk.py  models.py  ranking.py  resolution.py  scoring.py
python/intelligence/tests/: test_heuristics.py
scripts/: dev-demo-stack.mjs
tests/: providers.test.ts  workflows.test.ts
